trybuild_tests/tests/trybuild/fail/butane_type_extra_args.stderr
error: Unexpected tokens in butane_type
 --> tests/trybuild/fail/butane_type_extra_args.rs:4:1
  |
4 | #[butane_type(Text, Extra)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `butane_type` (in Nightly builds, run with -Z macro-backtrace for more info)
